# AMYplug

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICES.md  README.md
.github/workflows/: README.md  build.yml
cmake/: amy.cmake
docs/: AMY_WIRE_PROTOCOL.md  ARCHITECTURE.md  CODE_REVIEW.md  DX7_PARAMETERS.md  ENGINE_NOTES.md  FIRMWARE_UPDATE_CHECK.md  HARDWARE_LATENCY.md  HARDWARE_MODE.md  ROADMAP.md  UI.md
licenses/: STK-4.3.txt
scripts/: bootstrap.sh  build.sh  gen_patch_names.py  install.sh  package.sh
src/: AmyPlugEditor.cpp  AmyPlugEditor.h  AmyPlugProcessor.cpp  AmyPlugProcessor.h
src/amyfx/: AmyBiquad.h  AmyChorus.h  AmyEcho.h  AmyEq.h  AmyFilter.h  AmyReverb.h  EnvelopeFollower.h
src/dsp/: BitCrusher.h  WdfClipper.h
src/engine/: AmyConfig.h  AmyConstants.h  AmyWire.cpp  AmyWire.h  EngineOwnership.h  FirmwareCheck.cpp  FirmwareCheck.h  HardwareBackend.cpp  HardwareBackend.h  IAmyBackend.h  SerialPort.cpp  SerialPort.h  SerialTransport.cpp  SerialTransport.h  SoftwareBackend.cpp  SoftwareBackend.h  amy_platform_stubs.c
src/fx/: FxEditor.cpp  FxEditor.h  FxProcessor.cpp  FxProcessor.h
src/gui/: AmyColours.h  AmyFonts.cpp  AmyFonts.h  AmyLookAndFeel.cpp  AmyLookAndFeel.h
src/midi/: NoteRouter.cpp  NoteRouter.h
src/state/: AnalogLfo.h  Dx7Envelope.h  Dx7Import.cpp  Dx7Import.h  Dx7Lfo.h  Dx7Osc.h  FmAlgorithms.h  Parameters.h  PatchLibrary.cpp  PatchLibrary.h  PatchModel.cpp  PatchModel.h
tests/: BitCrusherTests.cpp  CMakeLists.txt  Dx7ImportTests.cpp  EngineRenderTests.cpp  MockBackend.h  NoteRouterTests.cpp  PatchLibraryTests.cpp  PatchNamesTests.cpp  StateTests.cpp  WdfClipperTests.cpp  WireMessageTests.cpp
tools/: Snapshot.cpp
visual/design_handoff_amyplug/: AMYplug.dc.html  Fader.dc.html  Knob.dc.html  README.md
